<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAndEditEventActivity"
    android:background="@color/colorNeutral">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarNewEvent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        android:translationZ="0.1dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEvent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="80dp"
        android:paddingBottom="80dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_event"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:maxLength="28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:ems="7"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:focusableInTouchMode="false"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="4"
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:focusableInTouchMode="false"
            android:inputType="date|time"
            android:textAlignment="center"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="@id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guestStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eventDetailsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/attendHeaderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/attendingHeader"
            app:layout_constraintBottom_toBottomOf="@id/attendingHeader"
            app:layout_constraintEnd_toStartOf="@id/attendingHeader"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="6dp"
            android:src="@drawable/approve"
            android:tint="@color/colorAccent"/>

        <TextView
            android:id="@+id/attendingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/attending"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/attendHeaderIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendingListRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layoutAnimation="@anim/guest_recycler_view_animation"
            app:layout_constraintStart_toStartOf="@id/attendHeaderIcon"
            app:layout_constraintTop_toBottomOf="@id/attendHeaderIcon"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/declinedHeaderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/declinedHeader"
            app:layout_constraintBottom_toBottomOf="@id/declinedHeader"
            app:layout_constraintEnd_toStartOf="@id/declinedHeader"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="6dp"
            android:src="@drawable/decline"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/declinedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/declined"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@id/declinedHeaderIcon"
            app:layout_constraintTop_toBottomOf="@id/attendingListRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/declinedListRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layoutAnimation="@anim/guest_recycler_view_animation"
            app:layout_constraintStart_toStartOf="@id/declinedHeaderIcon"
            app:layout_constraintTop_toBottomOf="@id/declinedHeaderIcon"
            android:orientation="horizontal"/>

        <ImageView
            android:id="@+id/invitedHeaderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/invitedHeader"
            app:layout_constraintBottom_toBottomOf="@id/invitedHeader"
            app:layout_constraintEnd_toStartOf="@id/invitedHeader"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="6dp"
            android:src="@drawable/new_alert"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/invitedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/not_responded"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@id/invitedHeaderIcon"
            app:layout_constraintTop_toBottomOf="@id/declinedListRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invitedListRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layoutAnimation="@anim/guest_recycler_view_animation"
            app:layout_constraintStart_toStartOf="@id/invitedHeaderIcon"
            app:layout_constraintTop_toBottomOf="@id/invitedHeaderIcon"
            android:orientation="horizontal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/inviteFabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/save_event"
        android:text="@string/save_amp_invite"
        android:visibility="gone"
        android:backgroundTint="@color/colorAccent"
        app:iconTint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>

    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speedDialFabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:sdMainFabClosedSrc="@drawable/add"
        app:sdMainFabClosedIconColor="@color/colorWhite"
        app:sdOverlayLayout="@id/overlay"/>
</androidx.constraintlayout.widget.ConstraintLayout>